[package]
name = "escrow"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive", "const_zeroed"]}
solana-program = "2.2.1"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
mollusk-svm = "0.2.0"
solana-sdk = "2.2.1"
spl-associated-token-account = "7.0.0"