[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
shank = "0.4.3"
solana-program = "2.2.1"
thiserror = "2.0.12"

[features]
no-entrypoint = []

[dev-dependencies]
mollusk-svm = "0.2.0"
solana-sdk = "2.2.1"
five8_const = "0.1.4"